refactor: [044-SECURITY/SETTINGS] AllowHeaders List.of() 메서드로 변경