@@ -13,6 +13,7 @@ import com.valuewith.tweaver.commons.security.JwtAuthenticationFilter;
 import com.valuewith.tweaver.commons.security.service.TokenService;
 import com.valuewith.tweaver.member.repository.MemberRepository;
 import java.util.Arrays;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -56,7 +57,7 @@ public class SecurityConfig {
               "https://value-with-m8p17yj83-yujinji.vercel.app"
               ));
           config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-          config.setAllowedHeaders(Arrays.asList("*"));
+          config.setAllowedHeaders(List.of("*"));
           config.setAllowCredentials(true);
           return config;
         }))
